29 june demo changes

--- a/backend/web/css/site.min3f0d.css
+++ b/backend/web/css/site.min3f0d.css
@@ -12707,7 +12707,7 @@ a.link-theme
 .modal-theme .modal-header
 {
 	/* background-color:#006666; */
-	background-color:#e65a00;
+	background-color:#3a9fbf;
 	
 }
 .modal-title-theme{
